# ConstexprFormat

./: CMakeLists.txt  README.md  const_format.h  main.cpp
compilation_tests/: CMakeLists.txt  correct_formats.cpp  invalid_formats.cpp
tests/: CMakeLists.txt  digits_tests.cpp  doctest.h  float_bruteforce.cpp  floats_tests.cpp  string_tests.cpp  tests.h  tests_main.cpp
